--- a/angular-ecommerce/angular-ecommerce/tsconfig.json
+++ b/angular-ecommerce/angular-ecommerce/tsconfig.json
@@ -26,6 +26,7 @@
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
+    "noImplicitReturns": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
