--- a/angular-ecommerce/angular-ecommerce/package.json
+++ b/angular-ecommerce/angular-ecommerce/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~13.2.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@okta/okta-angular": "^5.1.1",
+    "@okta/okta-signin-widget": "^6.1.2",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
